# LanShareCPP

./: README.md
LanShareCPP_Complete/: .gitignore  CMakeLists.txt  LICENSE  MINGW_SETUP.md  QUICK_MINGW.md  README.md  START_HERE.md  TROUBLESHOOTING.md  VSCODE_SETUP.md  WINDOWS_SETUP.md
LanShareCPP_Complete/client/: ClientCore.cpp  ClientCore.h  CryptoManager.h  FileReceiver.h  FileSender.h  main.cpp
LanShareCPP_Complete/common/: Protocol.h
LanShareCPP_Complete/server/: ClientSession.cpp  ClientSession.h  GroupManager.cpp  GroupManager.h  MessageRouter.cpp  MessageRouter.h  ServerCore.cpp
LanShareCPP_Complete/ui/: ChatWindow.cpp  ChatWindow.h  ChatWindow.ui  FileTransferWidget.cpp  FileTransferWidget.h  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MessageBubble.cpp  MessageBubble.h  MessageDB.cpp  MessageDB.h  main.cpp
